# chatbot-logger

./: .env.sample  .gitignore  README.md  ai_client.py  config.yaml  deepseek_client.py  drag_and_drop.bat  json_loader.py  line_message.py  line_notify.py  loader.py  main.py  notify.py  pyproject.toml  requirements-dev.ini  requirements-dev.txt  requirements.ini  token_request.py  upload.py  uploader.py  validate.py
sample/: gemini_structure.json  hatena_response_format.xml
src/cha2hatena/: __init__.py  __main__.py  ai_client.py  hatenablog_poster.py  json_loader.py  line_message.py  main.py  setup.py
src/cha2hatena/llm/: conversational_ai.py  deepseek_client.py  gemini_client.py  llm_fee.py  llm_stats.py
tests/: AbstractClass.py  conftest.py  test_ai_client.py  test_gemini.py  test_hatenablog_poster.py  test_json.py  test_json_loader.py  test_main.py  test_structure.py  test_uploader.py
